--- a/dev/meest_intrnt_parcel_delivery.html
+++ b/dev/meest_intrnt_parcel_delivery.html
@@ -18,22 +18,22 @@
             <div class="navigation-international-del">
                 <ul class="navigations-menu-page">
                     <li class="" menu-tag="2">
-                        <a href="#">Тарифи</a>
+                        <a href="#tariff-wrap">Тарифи</a>
                     </li>
                     <li class="" menu-tag="3">
-                        <a href="#">Калькулятор</a>
+                        <a href="#calculator">Калькулятор</a>
                     </li>
                     <li class="" menu-tag="4">
-                        <a href="#">Доставка у країни</a>
+                        <a href="#country-parcel-del">Доставка у країни</a>
                     </li>
                     <li class="" menu-tag="4">
-                        <a href="#">Інструкція</a>
+                        <a href="#instruction">Інструкція</a>
                     </li>
                     <li class="" menu-tag="4">
                         <a href="#">Список відділень</a>
                     </li>
                     <li class="active" menu-tag="1">
-                        <a href="#">Обмеження</a>
+                        <a href="#restrictions-shipments">Обмеження</a>
                     </li>
                     <li class="link-navigation">
                         <a href="#">Як відправити посилку?</a>
@@ -88,15 +88,14 @@
 			</div>
 		</div>
 	</div>
-    <div class="sec-country-parcel-delivery">
+    <div class="sec-country-parcel-delivery" id="country-parcel-del">
         <div class="container">
             <div class="sec-country-parcel-delivery__inner">
                 <h2 class="heading-section">КРАЇНИ, В ЯКІ ЗДІЙСНЮЄТЬСЯ <br> МІЖНАРОДНА ДОСТАВКА ПОСИЛОК</h2>
                 <div class="flex-info">
                     <p class="descr">Meest здійснює доставку посилок з України від фізичних осіб у наступні країни Європи, Азії, Африки, Північної та Південної Америки, а також Австралію у найкоротші терміни</p>
                     <div class="input-country-search">
-                        <input type="text" placeholder="Країна">
-                        <button class="blue-button54">пошук</button>
+                        <input type="text" placeholder="Країна" class="input-country">
                     </div>
                 </div>
                 <div class="scroll-sec" data-simplebar="1">
@@ -105,7 +104,7 @@
                             <img class="alert-icon" src="img/alert.svg" alt="">
                             <img class="country-icon" src="img/country_img_denmark.svg" alt="">
                             <a href="#" class="link-country">
-                                <span>Denmark</span>
+                                <span>Ukraine</span>
                                 <img src="img/arrow_country.svg" alt="">
                             </a>
                         </div>
@@ -113,7 +112,7 @@
                             <img class="alert-icon" src="img/alert.svg" alt="">
                             <img class="country-icon" src="img/country_img_ukr.svg" alt="">
                             <a href="#" class="link-country">
-                                <span>Denmark</span>
+                                <span>POland</span>
                                 <img src="img/arrow_country.svg" alt="">
                             </a>
                         </div>
@@ -129,7 +128,7 @@
                             <img class="alert-icon" src="img/alert.svg" alt="">
                             <img class="country-icon" src="img/country_img_azerb.svg" alt="">
                             <a href="#" class="link-country">
-                                <span>Denmark</span>
+                                <span>Germany</span>
                                 <img src="img/arrow_country.svg" alt="">
                             </a>
                         </div>
@@ -145,7 +144,7 @@
                             <img class="alert-icon" src="img/alert.svg" alt="">
                             <img class="country-icon" src="img/country_img_bulgaria.svg" alt="">
                             <a href="#" class="link-country">
-                                <span>Denmark</span>
+                                <span>Chezh</span>
                                 <img src="img/arrow_country.svg" alt="">
                             </a>
                         </div>
@@ -273,7 +272,7 @@
             </div>
         </div>
     </div>
-    <div class="sec-shipping-calculator bcg-light-blue">
+    <div class="sec-shipping-calculator bcg-light-blue" id="calculator">
         <div class="container">
             <div class="sec-shipping-calculator__inner">
                 <h2 class="heading-section">Калькулятор доставки</h2>
@@ -303,45 +302,45 @@
         </div>
     </div>
     <div class="container">
-        <div class="sec-tariffs">
+        <div class="sec-tariffs" id="tariff-wrap">
             <h2 class="heading-section">Тарифи</h2>
             <div class="tariffs-wrapper">
-                <div class="tariffs-wrapper__row">
+                <a href="#" class="tariffs-wrapper__row">
                     <img src="img/tariff.svg" alt="">
-                    <p>Тарифи на доставку в Канаду та США</p>
-                </div>
-                <div class="tariffs-wrapper__row">
+                    <span>Тарифи на доставку в Канаду та США</span>
+                </a>
+                <a href="#" class="tariffs-wrapper__row">
                     <img src="img/tariff.svg" alt="">
-                    <p>Тарифи на доставку в країни Європи</p>
-                </div>
-                <div class="tariffs-wrapper__row">
+                    <span>Тарифи на доставку в країни Європи</span>
+                </a>
+                <a href="#" class="tariffs-wrapper__row">
                     <img src="img/tariff.svg" alt="">
-                    <p>Тарифи на доставку в країни Азії</p>
-                </div>
-                <div class="tariffs-wrapper__row">
+                    <span>Тарифи на доставку в країни Азії</span>
+                </a>
+                <a href="#" class="tariffs-wrapper__row">
                     <img src="img/tariff.svg" alt="">
-                    <p>Тарифи на доставку в Польщу</p>
-                </div>
-                <div class="tariffs-wrapper__row">
+                    <span>Тарифи на доставку в Польщу</span>
+                </a>
+                <a href="#" class="tariffs-wrapper__row">
                     <img src="img/tariff.svg" alt="">
-                    <p>Тарифи на доставку в Кіпр</p>
-                </div>
-                <div class="tariffs-wrapper__row">
+                    <span>Тарифи на доставку в Кіпр</span>
+                </a>
+                <a href="#" class="tariffs-wrapper__row">
                     <img src="img/tariff.svg" alt="">
-                    <p>Тарифи на доставку в Грузію</p>
-                </div>
-                <div class="tariffs-wrapper__row">
+                    <span>Тарифи на доставку в Грузію</span>
+                </a>
+                <a href="#" class="tariffs-wrapper__row">
                     <img src="img/tariff.svg" alt="">
-                    <p>Тарифи на доставку в Ізраїль</p>
-                </div>
-                <div class="tariffs-wrapper__row">
+                    <span>Тарифи на доставку в Ізраїль</span>
+                </a>
+                <a href="#" class="tariffs-wrapper__row">
                     <img src="img/tariff.svg" alt="">
-                    <p>в країни Азії, Африки, Півд. Америки та Австралію</p>
-                </div>
+                    <span>в країни Азії, Африки, Півд. Америки та Австралію</span>
+                </a>
             </div>
         </div>
     </div>
-    <div class="sec-instruction bcg-grey">
+    <div class="sec-instruction bcg-grey" id="instruction">
         <div class="container">
             <div class="sec-instruction__inner">
                 <div class="text-part">
@@ -625,7 +624,7 @@
             </div>
         </div>
     </div>
-    <div class="sec-restrictions-shipments bcg-light-blue">
+    <div class="sec-restrictions-shipments bcg-light-blue" id="restrictions-shipments">
         <div class="container">
             <div class="sec-restrictions-shipments__inner">
                 <h2 class="heading-section">Обмеження для відправлень</h2>
