eidt slider country

--- a/dev/meest_intrnt_parcel_delivery.html
+++ b/dev/meest_intrnt_parcel_delivery.html
@@ -14,6 +14,11 @@
 </head>
 <body>
     <div class="meest-cooperation intrnt-parcel-delivery international-delivery top-wrap bcg-light-blue bb">
+        <div class="swiper-pagination-img"></div>
+        <div class="swiper-buttons-country">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
 		<div class="container">
             <div class="navigation-international-del">
                 <ul class="navigations-menu-page">
@@ -47,41 +52,108 @@
                     <a href="#" class="link-navigation">Тарифи в Польщу</a>
                 </div>
             </div>
-			<div class="top-wrap__inner">
-                <div class="text-part">
-                    <div class="label-sec">
-                        <span>Міжнародна доставка посилок</span>
-                    </div>
-                    <h1 class="heading-section">Діє спеціальна ціна <br> на доставку посилок <br> в Європу, США і Канаду</h1>
-                    <div class="flex-buttons">
-                        <a href="#" class="blue-button54">сворити посилку</a>
-                        <a href="#" class="blue-button54 trnsprnt-btn">Виклик кур'єра</a>
-                        <div class="swiper-buttons">
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-pagination-img"></div>
-                            <div class="swiper-button-next"></div>
+			<div class="top-wrap__inner swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide ">
+                        <div class="slide-country">
+                            <div class="text-part">
+                                <div class="label-sec">
+                                    <span>Міжнародна доставка посилок</span>
+                                </div>
+                                <h1 class="heading-section">Діє спеціальна ціна <br> на доставку посилок <br> в Europe, США і Канаду</h1>
+                                <div class="flex-buttons">
+                                    <a href="#" class="blue-button54">сворити посилку</a>
+                                    <a href="#" class="blue-button54 trnsprnt-btn">Виклик кур'єра</a>
+                                </div>
+                            </div>
+                            <div class="main-img">
+                                <img src="img/usa_img.png" alt="">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="swiper main-img">
-                    <div class=" swiper-wrapper">
-                        <div class="img-slide swiper-slide">
-                            <img src="img/usa_img.png" alt="">
+                    <div class="swiper-slide">
+                        <div class="slide-country">
+                            <div class="text-part">
+                                <div class="label-sec">
+                                    <span>Міжнародна доставка посилок</span>
+                                </div>
+                                <h1 class="heading-section">Діє спеціальна ціна <br> на доставку посилок <br> в Європу, USA і Канаду</h1>
+                                <div class="flex-buttons">
+                                    <a href="#" class="blue-button54">сворити посилку</a>
+                                    <a href="#" class="blue-button54 trnsprnt-btn">Виклик кур'єра</a>
+                                </div>
+                            </div>
+                            <div class="main-img">
+                                <img src="img/canada_img.png" alt="">
+                            </div>
                         </div>
-                        <div class="img-slide swiper-slide">
-                            <img src="img/canada_img.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slide-country">
+                            <div class="text-part">
+                                <div class="label-sec">
+                                    <span>Міжнародна доставка посилок</span>
+                                </div>
+                                <h1 class="heading-section">Діє спеціальна ціна <br> на доставку посилок <br> в Європу, США і Canada</h1>
+                                <div class="flex-buttons">
+                                    <a href="#" class="blue-button54">сворити посилку</a>
+                                    <a href="#" class="blue-button54 trnsprnt-btn">Виклик кур'єра</a>
+                                </div>
+                            </div>
+                            <div class="main-img">
+                                <img src="img/poland_img.png" alt="">
+                            </div>
                         </div>
-                        <div class="img-slide swiper-slide">
-                            <img src="img/poland_img.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slide-country">
+                            <div class="text-part">
+                                <div class="label-sec">
+                                    <span>Міжнародна доставка посилок</span>
+                                </div>
+                                <h1 class="heading-section">Діє спеціальна ціна <br> на доставку посилок <br> в Європу, США і Канаду</h1>
+                                <div class="flex-buttons">
+                                    <a href="#" class="blue-button54">сворити посилку</a>
+                                    <a href="#" class="blue-button54 trnsprnt-btn">Виклик кур'єра</a>
+                                </div>
+                            </div>
+                            <div class="main-img">
+                                <img src="img/germany_img.png" alt="">
+                            </div>
                         </div>
-                        <div class="img-slide swiper-slide">
-                            <img src="img/germany_img.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slide-country">
+                            <div class="text-part">
+                                <div class="label-sec">
+                                    <span>Міжнародна доставка посилок</span>
+                                </div>
+                                <h1 class="heading-section">Діє спеціальна ціна <br> на доставку посилок <br> в Європу, США і Канаду</h1>
+                                <div class="flex-buttons">
+                                    <a href="#" class="blue-button54">сворити посилку</a>
+                                    <a href="#" class="blue-button54 trnsprnt-btn">Виклик кур'єра</a>
+                                </div>
+                            </div>
+                            <div class="main-img">
+                                <img src="img/chezh_img.png" alt="">
+                            </div>
                         </div>
-                        <div class="img-slide swiper-slide">
-                            <img src="img/chezh_img.png" alt="">
-                        </div>
-                        <div class="img-slide swiper-slide">
-                            <img src="img/eng_img.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slide-country">
+                            <div class="text-part">
+                                <div class="label-sec">
+                                    <span>Міжнародна доставка посилок</span>
+                                </div>
+                                <h1 class="heading-section">Діє спеціальна ціна <br> на доставку посилок <br> в Європу, США і Канаду</h1>
+                                <div class="flex-buttons">
+                                    <a href="#" class="blue-button54">сворити посилку</a>
+                                    <a href="#" class="blue-button54 trnsprnt-btn">Виклик кур'єра</a>
+                                </div>
+                            </div>
+                            <div class="main-img">
+                                <img src="img/eng_img.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -632,21 +704,21 @@
                 <div class="restr-shipments-wrapper">
                     <div class="restr-shipments-wrapper__col">
                         <div class="img">
-                            <img src="img/img_restr.png" alt="">
+                            <img src="img/icon-in-circle.svg" alt="">
                         </div>
                         <h3>ЗАБОРОНЕНІ ДО <br> ПЕРЕСИЛАННЯ ТОВАРИ</h3>
                         <a href="#" class="blue-button45">ознайомитись</a>
                     </div>
                     <div class="restr-shipments-wrapper__col">
                         <div class="img">
-                            <img src="img/img_restr.png" alt="">
+                            <img src="img/icon-in-circle2.svg" alt="">
                         </div>
                         <h3>ВИМОГИ <br> ДО ПАКУВАННЯ</h3>
                         <a href="#" class="blue-button45">ознайомитись</a>
                     </div>
                     <div class="restr-shipments-wrapper__col">
                         <div class="img">
-                            <img src="img/img_restr.png" alt="">
+                            <img src="img/icon-in-circle3.svg" alt="">
                         </div>
                         <h3>ОБМЕЖЕННЯ <br> ДЛЯ США І КАНАДИ</h3>
                         <a href="#" class="blue-button45">ознайомитись</a>
