--- a/front/meest_intrnt_parcel_delivery.html
+++ b/front/meest_intrnt_parcel_delivery.html
@@ -354,9 +354,6 @@
                         <div class="form-row flex_direct">
                             <label for="" class="label">Sender's country</label>
                             <input type="text" placeholder="Ukraine" disabled class="input">
-                            <!-- <select name="country" id="" class="country_select" disabled>
-                                <option value="" disabled></option>
-                            </select> -->
                         </div>
                         <div class="form-row flex_direct">
                             <label for="" class="label">Recipient's country</label>
@@ -458,7 +455,20 @@
                         <div class="top">
                             <img src="img/arrow_instruction.svg" alt="">
                         </div>
-                        <h3>Створи посилку <br> на сайті</h3>
+                        <div>
+                            <!-- new part -->
+                            <div class="price-parcel">
+                                <span>-50 грн</span>
+                                <div class="price-parcel__note">
+                                    <img src="img/note.svg" alt="">
+                                    <div class="note-description">
+                                        Сума знижки вказана за замовчуванням при створенні
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- new part end -->
+                            <h3>Створи посилку <br> на сайті</h3>
+                        </div>
                         <a href="#" class="blue-button54 white">СТВОРИТИ онлайн</a>
                     </div>
                 </div>
@@ -727,6 +737,48 @@
             </div>
         </div>
     </div>
+    <!-- new section -->
+    <div class="delivery-way-sec">
+        <div class="container">
+            <h2 class="delivery-way-sec__title">Відправляєш у канаду ти, <br> оплачує отримувач!</h2>
+            <div class="delivery-way-wrap">
+                <div class="delivery-way-wrap__col">
+                    <img src="img/del_way_icon1.svg" alt="">
+                    <h4>Отримувач в канаді</h4>
+                    <p>Створює декларацію на сайті</p>
+                </div>
+                <div class="delivery-way-wrap__col">
+                    <img src="img/del_way_icon2.svg" alt="">
+                    <h4>Отримувач в канаді</h4>
+                    <p>передає номер декларації відправнику в Україні</p>
+                </div>
+                <div class="delivery-way-wrap__center-col">
+                    <h3>Відправляєш у канаду ти, <br> оплачує отримувач!</h3>
+                    <a href="#" class="blue-button45">
+                        створити декларацію
+                        <img src="img/arrow_btn.svg" alt="">
+                    </a>
+                </div>
+                <div class="delivery-way-wrap__col">
+                    <img src="img/del_way_icon3.svg" alt="">
+                    <h4>Відправник в Україні</h4>
+                    <p>віддає посилку на відділенні, називає номер декларації</p>
+                </div>
+                <div class="delivery-way-wrap__col">
+                    <img src="img/del_way_icon4.svg" alt="">
+                    <h4>Отримувач в канаді</h4>
+                    <p>оплачує посилку при отриманні</p>
+                </div>
+            </div>
+            <div class="center-bth">
+                <a href="#" class="blue-button45">
+                    створити декларацію
+                    <img src="img/arrow_btn.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- new section end -->
     <div class="sec-faq">
         <div class="container">
             <div class="faq_wrap">
